--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="eventbuddy"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/lightTheme"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
             android:name=".activities.MenuActivity"
