--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.3"
-
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'com.google.android.gms:play-services-location:21.2.0'
+    implementation 'com.google.android.libraries.places:places:3.4.0'
+
+
+
 }
